examples/errors/parsing/iter-lambda-expr.cn
main : () [impure] =
  let f = fun x -> x + 1;
  ()
